Add database connection script and create issuances index view with filtering and upload functionality
- Implemented a new PHP script for database connection in `db_test.php`.
- Created a Blade view for issuances with filtering options, search functionality, and a modal for document upload.
- Integrated DataTables for dynamic data handling and pagination.
- Added client-side validation and preview for uploaded documents.
- Enhanced user experience with responsive design and interactive elements.

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.3|^8.0",
         "fideloper/proxy": "^4.4",
+        "fruitcake/laravel-cors": "^3.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "infyomlabs/laravel-ui-adminlte": "^3.1",
         "kwn/number-to-words": "^2.9",
@@ -19,7 +20,10 @@
         "maatwebsite/excel": "^3.1",
         "nesbot/carbon": "^2.45",
         "owen-it/laravel-auditing": "^12.0",
-        "rappasoft/laravel-livewire-tables": "^1.6"
+        "rappasoft/laravel-livewire-tables": "^1.6",
+        "spatie/pdf-to-text": "^1.54",
+        "thiagoalessio/tesseract_ocr": "^2.13",
+        "yajra/laravel-datatables-buttons": "^4.13"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
