--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "bootstrap": "^4.0.0",
         "jquery": "^3.2",
         "laravel-mix": "^6.0.43",
+        "laravel-mix-artisan-serve": "^2.0.0",
         "lodash": "^4.17.21",
         "popper.js": "^1.12",
         "postcss": "^8.3.6",
@@ -26,6 +27,8 @@
         "tailwindcss-plugins": "^0.3.0"
     },
     "dependencies": {
+        "datatables.net-bs4": "^2.3.2",
+        "datatables.net-responsive-bs4": "^3.0.5",
         "html2pdf.js": "^0.10.1",
         "jspdf": "^2.5.1",
         "tempusdominus-bootstrap-4": "^5.39.2"
