--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "autoprefixer": "^10.3.1",
         "axios": "^0.21.4",
         "bootstrap": "^4.0.0",
+        "flatpickr": "^4.6.13",
         "jquery": "^3.2",
         "laravel-mix": "^6.0.43",
         "laravel-mix-artisan-serve": "^2.0.0",
