--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
-    "/css/datatables.css": "/css/datatables.css"
+    "/css/datatables.css": "/css/datatables.css",
+    "/js/flatpickr.js": "/js/flatpickr.js"
 }
